[package]
name = "rust_cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
cpal = "0.15.2"
futures = "0.3.29"
gstreamer = "0.21.2"
rscam = "0.5.5"
rust_gpiozero = "0.2.1"
tokio = "1.34.0"
tokio-stream = "0.1.14"
